pkl-core/src/test/files/LanguageSnippetTests/input/errors/relativePathToNotAModule2.pkl
local objectThatAmendsModule = (module) {
  // add a local property to force this into a new object amends;
  // empty object amends are optimized away.
  local qux = 1
}

res = module.relativePathTo(objectThatAmendsModule)

